CSS. added to the header of the webpage

--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>The Landing Page</title>
+ <link rel="stylesheet" href="./style.css">
 </head>
 <body>
  <div class="header">
-  <div class="top-bar">
-   <div class="logo">Header Logo</div> 
-   <div class="right-links">
-    <ul>
+  <div class="top-bar dark-bgcolor">
+   <div class="logo dark-bgcolor">Header Logo</div> 
+   <div class="right-links dark-bgcolor">
+    <ul class="dark-bgcolor">
      <li><a href="#">header link one</a></li>
      <li><a href="#">header link two</a></li>
      <li><a href="#">header link three</a></li>
     </ul>
    </div>
   </div>
-  <div class="header-content">
-   <div class="child-content">
-    <div class="hero-text">This Website is awesome</div>
-    <p>This website has some subtext that goes here under the main title. it's smaller font and the color is lower contrast</p>
+  <div class="header-content dark-bgcolor">
+   <div class="child-content dark-bgcolor">
+    <div class="hero-text dark-bgcolor">This Website is <br> awesome</div>
+    <p class="dark-bgcolor">This website has some subtext that goes here under <br> the main title. it's smaller font and the color is lower <br> contrast</p>
     <button>Sign up</button>
    </div>
    <div class="image">
-    this is a placeholder fot an image
+    this is a placeholder for an image
    </div>
   </div>
  </div>
