--- a/index.html
+++ b/index.html
@@ -30,5 +30,21 @@
    </div>
   </div>
  </div>
+ <div class="mid-section1 color-white">
+  <div class="info-header-text ">
+   Some random information
+  </div>
+  <div class="cards">
+   <div class="card"></div>
+   this is come subtext under an illustration or image
+   <div class="card"></div>
+   this is come subtext under an illustration or image
+   <div class="card"></div>
+   this is come subtext under an illustration or image
+   <div class="card"></div>
+   this is come subtext under an illustration or image
+  </div>
+   
+ </div>
 </body>
 </html>
