CSS added to 1stSection

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,11 @@
  <title>The Landing Page</title>
  <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
  <div class="header">
   <div class="top-bar dark-bgcolor">
-   <div class="logo dark-bgcolor">Header Logo</div> 
+   <div class="logo dark-bgcolor">Header Logo</div>
    <div class="right-links dark-bgcolor">
     <ul class="dark-bgcolor">
      <li><a href="#">header link one</a></li>
@@ -22,7 +24,8 @@
   <div class="header-content dark-bgcolor">
    <div class="child-content dark-bgcolor">
     <div class="hero-text dark-bgcolor">This Website is <br> awesome</div>
-    <p class="dark-bgcolor">This website has some subtext that goes here under <br> the main title. it's smaller font and the color is lower <br> contrast</p>
+    <p class="dark-bgcolor">This website has some subtext that goes here under <br> the main title. it's smaller font
+     and the color is lower <br> contrast</p>
     <button>Sign up</button>
    </div>
    <div class="image">
@@ -30,21 +33,29 @@
    </div>
   </div>
  </div>
- <div class="mid-section1 color-white">
-  <div class="info-header-text ">
-   Some random information
+ <div class="section-1">
+  <div class="info-header-text">
+   Some random information.
   </div>
   <div class="cards">
+   <div class="block">
+    <div class="card"></div>
+    <div id="text"> this is come subtext under an illustration or image</div>
+   </div>
+   <div class="block">
    <div class="card"></div>
-   this is come subtext under an illustration or image
+   <div id="text"> this is come subtext under an illustration or image</div>
+   </div>
+   <div class="block">
    <div class="card"></div>
-   this is come subtext under an illustration or image
+   <div id="text"> this is come subtext under an illustration or image</div>
+   </div>
+   <div class="block">
    <div class="card"></div>
-   this is come subtext under an illustration or image
-   <div class="card"></div>
-   this is come subtext under an illustration or image
+   <div id="text"> this is come subtext under an illustration or image</div>
+   </div>
   </div>
-   
  </div>
 </body>
+
 </html>
