--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+
+
+ <!--  --------------- Header ------------------  -->
  <div class="header">
   <div class="top-bar dark-bgcolor">
    <div class="logo dark-bgcolor">Header Logo</div>
@@ -33,6 +36,9 @@
    </div>
   </div>
  </div>
+
+ <!--  --------------- Section_1 ------------------  -->
+
  <div class="section-1">
   <div class="info-header-text">
    Some random information.
@@ -53,6 +59,19 @@
    <div class="block">
    <div class="card"></div>
    <div id="text"> this is come subtext under an illustration or image</div>
+   </div>
+  </div>
+ </div>
+
+ <!--  --------------- Section_2 ------------------  -->
+
+ <div class="section-2">
+  <div class="content-sec2">
+   <div class="text-sec2 color-white">
+    <i> This is an inspiring quote,or a testimonial from a customer. Maybe it's just filling up apace, or maybe people will actually read it. Who knows? All I know is that it looks nice.</i>
+   </div>
+   <div class="bottom-text color-white">
+    -Thos, God of Thunder
    </div>
   </div>
  </div>
