--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
  <div class="section-2">
   <div class="content-sec2">
    <div class="text-sec2 color-white">
-    <i> This is an inspiring quote,or a testimonial from a customer. Maybe it's just filling up apace, or maybe people will actually read it. Who knows? All I know is that it looks nice.</i>
+     This is an inspiring quote,or a testimonial from a customer. Maybe it's just filling up apace, or maybe people will actually read it. Who knows? All I know is that it looks nice.
    </div>
    <div class="bottom-text color-white">
     -Thos, God of Thunder
