HTML --> 3st section added

--- a/index.html
+++ b/index.html
@@ -75,6 +75,22 @@
    </div>
   </div>
  </div>
+
+<!--  --------------- Section_3 ------------------  -->
+
+<div class="section-3">
+  <div class="blue-box">
+    <div class="main-box">
+      <div class="main-text">Call to action!it's time!</div>
+      <div class="sub-text">
+        Sign up for our product by clicking that button right over there!
+      </div>
+    </div>
+    
+      <button class="last-button">Sign up</button>
+    
+  </div>
+</div>
 </body>
 
 </html>
