--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
  <div class="section-2">
   <div class="content-sec2">
-   <div class="text-sec2 color-white">
+   <div class="text-sec2 ">
      This is an inspiring quote,or a testimonial from a customer. Maybe it's just filling up apace, or maybe people will actually read it. Who knows? All I know is that it looks nice.
    </div>
    <div class="bottom-text color-white">
@@ -81,14 +81,14 @@
 <div class="section-3">
   <div class="blue-box">
     <div class="main-box">
-      <div class="main-text">Call to action!it's time!</div>
+      <div class="main-text">Call to action! it's time!</div>
       <div class="sub-text">
         Sign up for our product by clicking that button right over there!
       </div>
     </div>
-    
+    <div class="lst">
       <button class="last-button">Sign up</button>
-    
+    </div>
   </div>
 </div>
 </body>
