HTML --> footer added

--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
     </div>
   </div>
 </div>
+
+<!--  --------------- Footer ------------------  -->
+
+<div class="footer">
+  Copyright © The Odin Project 2021
+</div>
 </body>
 
 </html>
