--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <!--  --------------- Footer ------------------  -->
 
 <div class="footer">
-  Copyright © The Odin Project 2021
+  Copyright © The Moonergone Project 2021
 </div>
 </body>
 
